--- a/app/src/main/res/layout/fragment_add_2_experience.xml
+++ b/app/src/main/res/layout/fragment_add_2_experience.xml
@@ -1,164 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".editentry.AddEntry1Fragment"
     >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Experience of Emotion"
-        android:textSize="24sp"
-        android:layout_marginTop="16dp"
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView1"
-        app:layout_constraintVertical_chainStyle="spread"
-        android:visibility="gone"
-        tools:ignore="HardcodedText"
-        />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="What emotions did you feel in this situation? Choose up to 3, tap to delete:"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/emotionsChosen"
-        tools:ignore="HardcodedText"
-        />
-
-    <TextView
-        android:id="@+id/emotionsChosen"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/emotionSelection"
-        tools:ignore="HardcodedText"
-        />
-
-    <LinearLayout
-        android:id="@+id/emotionSelection"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:gravity="top"
-        android:background="@drawable/border"
-        app:layout_constraintTop_toBottomOf="@id/emotionsChosen"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/buttons"
-        android:orientation="vertical"
         >
 
-        <TextView
-            android:id="@+id/groupLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Choose a category:"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            tools:ignore="HardcodedText"
-            />
-
-        <Spinner
-            style="@style/Widget.AppCompat.Spinner.DropDown"
-            android:id="@+id/emotionGroups"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            />
+            >
 
-        <TextView
-            android:id="@+id/emotionLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Choose an emotion:"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            tools:ignore="HardcodedText"
-            />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Experience of Emotion"
+                android:textSize="24sp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/textView1"
+                app:layout_constraintVertical_chainStyle="spread"
+                android:visibility="gone"
+                tools:ignore="HardcodedText"
+                />
 
-        <Spinner
-            style="@style/Widget.AppCompat.Spinner.DropDown"
-            android:id="@+id/emotions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            />
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="What emotions did you feel in this situation? Choose up to 3, tap to delete:"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/emotionsChosen"
+                tools:ignore="HardcodedText"
+                />
 
-        <TextView
-            android:id="@+id/writeLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Or write it in:"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="16dp"
-            tools:ignore="HardcodedText"
-            />
+            <TextView
+                android:id="@+id/emotionsChosen"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="24sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintTop_toBottomOf="@id/textView1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/emotionSelection"
+                tools:ignore="HardcodedText"
+                tools:text="Fear, Anger"
+                />
 
-        <EditText
-            android:id="@+id/writeIn"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:lines="1"
-            android:maxLines="1"
-            app:layout_constraintTop_toBottomOf="@id/textView2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/textView3"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:inputType="textCapWords|textAutoCorrect"
-            android:textIsSelectable="true"
-            android:longClickable="true"
-            android:focusable="true"
-            android:gravity="start|top"
-            android:importantForAutofill="no"
-            android:imeOptions="actionDone"
-            />
+            <LinearLayout
+                android:id="@+id/emotionSelection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                android:gravity="top"
+                android:background="@drawable/border"
+                app:layout_constraintTop_toBottomOf="@id/emotionsChosen"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="vertical"
+                >
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/groupLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Choose a category:"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="16dp"
+                    android:labelFor="@id/emotionGroups"
+                    tools:ignore="HardcodedText"
+                    />
+
+                <Spinner
+                    style="@style/Widget.AppCompat.Spinner.DropDown"
+                    android:id="@+id/emotionGroups"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    />
+
+                <TextView
+                    android:id="@+id/emotionLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Choose an emotion:"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="16dp"
+                    tools:ignore="HardcodedText"
+                    android:labelFor="@id/emotions"
+                    />
+
+                <Spinner
+                    style="@style/Widget.AppCompat.Spinner.DropDown"
+                    android:id="@+id/emotions"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    />
+
+                <TextView
+                    android:id="@+id/writeLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Or write it in:"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="16dp"
+                    tools:ignore="HardcodedText"
+                    android:labelFor="@id/writeIn"
+                    />
+
+                <EditText
+                    android:id="@+id/writeIn"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:lines="1"
+                    android:maxLines="1"
+                    app:layout_constraintTop_toBottomOf="@id/writeLabel"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:inputType="textCapWords|textAutoCorrect"
+                    android:textIsSelectable="true"
+                    android:longClickable="true"
+                    android:focusable="true"
+                    android:gravity="start|top"
+                    android:importantForAutofill="no"
+                    android:imeOptions="actionDone"
+                    />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
     <include
         android:id="@+id/buttons"
         layout="@layout/next_previous"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        app:layout_constraintTop_toBottomOf="@id/emotionSelection"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scroll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
