--- a/app/src/main/res/layout/fragment_add_5_relationships.xml
+++ b/app/src/main/res/layout/fragment_add_5_relationships.xml
@@ -1,75 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".editentry.AddEntry1Fragment"
     >
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Relationships"
-        android:textSize="24sp"
-        android:layout_marginTop="16dp"
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/textView1"
-        app:layout_constraintVertical_chainStyle="spread_inside"
-        android:visibility="gone"
-        tools:ignore="HardcodedText"
-        />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="0dp"
-        android:gravity="center"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/relationshipsQuestion"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/relationships"
-        tools:ignore="HardcodedText"
-        />
-
-    <EditText
-        android:id="@+id/relationships"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:minHeight="128dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="start|top"
-        app:layout_constraintTop_toBottomOf="@id/textView1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/buttons"
-        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
-        android:textIsSelectable="true"
-        android:longClickable="true"
-        android:focusable="true"
-        android:hint="@string/relationshipsHint"
-        />
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Relationships"
+            android:textSize="24sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/textView1"
+            app:layout_constraintVertical_chainStyle="spread_inside"
+            android:visibility="gone"
+            tools:ignore="HardcodedText"
+            />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/relationshipsQuestion"
+            android:labelFor="@id/relationships"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/relationships"
+            tools:ignore="HardcodedText"
+            />
+
+        <EditText
+            android:id="@+id/relationships"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="256dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:gravity="start|top"
+            app:layout_constraintTop_toBottomOf="@id/textView1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
+            android:textIsSelectable="true"
+            android:longClickable="true"
+            android:focusable="true"
+            android:hint="@string/relationshipsHint"
+            />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
 
     <include
         android:id="@+id/buttons"
         layout="@layout/next_previous"
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        app:layout_constraintTop_toBottomOf="@id/relationships"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/scroll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
