--- a/app/src/main/res/layout/fragment_cogval_question_2_texts.xml
+++ b/app/src/main/res/layout/fragment_cogval_question_2_texts.xml
@@ -78,11 +78,12 @@
     <EditText
         android:id="@+id/answer1"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:minHeight="200dp"
         android:gravity="top"
         tools:text="hi"
         app:layout_constraintTop_toBottomOf="@id/question1"
@@ -117,12 +118,13 @@
     <EditText
         android:id="@+id/answer2"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:textSize="18sp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:gravity="top"
+        android:minHeight="200dp"
         app:layout_constraintTop_toBottomOf="@id/question2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
