--- a/app/src/main/res/layout/fragment_cogval_question_slider.xml
+++ b/app/src/main/res/layout/fragment_cogval_question_slider.xml
@@ -47,77 +47,93 @@
         app:layout_constraintVertical_weight="18"
         >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
-    <TextView
-        android:id="@+id/question"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="question"
-        tools:text="@string/validityQuestion12"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/minimumDesc"
-        android:labelFor="@id/answer"
-        tools:ignore="HardcodedText"
-        />
+            <TextView
+                android:id="@+id/question"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="question"
+                tools:text="@string/validityQuestion12"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/minimumDesc"
+                android:labelFor="@id/answer"
+                tools:ignore="HardcodedText"
+                />
 
-    <TextView
-        android:id="@+id/minimumDesc"
-        android:layout_width="wrap_content"
-        android:layout_height="65dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:gravity="start"
-        android:labelFor="@id/answer"
-        android:text="question"
-        android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@id/question"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/answer"
-        tools:ignore="HardcodedText"
-        tools:text="Completely\nirrational" />
+            <TextView
+                android:id="@+id/minimumDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="65dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
+                android:gravity="start"
+                android:labelFor="@id/answer"
+                android:textSize="18sp"
+                app:layout_constraintTop_toBottomOf="@id/question"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/answer"
+                tools:ignore="HardcodedText"
+                tools:text="Completely\nirrational" />
 
-    <TextView
-        android:id="@+id/maximumDesc"
-        android:layout_width="0dp"
-        android:layout_height="65dp"
-        android:text="question"
-        tools:text="Completely\nrational"
-        android:textSize="18sp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:gravity="end"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/minimumDesc"
-        android:labelFor="@id/answer"
-        tools:ignore="HardcodedText"
-        />
 
-    <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/answer"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:textSize="18sp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="32dp"
-        android:max="7"
-        app:layout_constraintTop_toBottomOf="@id/minimumDesc"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="HardcodedText"
-        />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/answerVal"
+                android:layout_width="wrap_content"
+                android:layout_height="65dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
+                android:gravity="start"
+                android:labelFor="@id/answer"
+                android:text="4"
+                android:textSize="28sp"
+                app:layout_constraintTop_toBottomOf="@id/question"
+                app:layout_constraintStart_toEndOf="@id/minimumDesc"
+                app:layout_constraintEnd_toStartOf="@id/maximumDesc"
+                app:layout_constraintBottom_toTopOf="@id/answer"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/maximumDesc"
+                android:layout_width="0dp"
+                android:layout_height="65dp"
+                android:text="question"
+                android:textSize="18sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:gravity="end"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/minimumDesc"
+                android:labelFor="@id/answer"
+                tools:text="Completely\nrational"
+                tools:ignore="HardcodedText"
+                />
+
+            <androidx.appcompat.widget.AppCompatSeekBar
+                android:id="@+id/answer"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:textSize="18sp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="32dp"
+                android:max="6"
+                app:layout_constraintTop_toBottomOf="@id/minimumDesc"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="HardcodedText"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <include
