--- a/app/src/main/res/layout/fragment_cogval_question_text.xml
+++ b/app/src/main/res/layout/fragment_cogval_question_text.xml
@@ -50,51 +50,53 @@
         app:layout_constraintVertical_weight="18"
         >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
 
-    <TextView
-        android:id="@+id/question"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="question"
-        tools:text="@string/validityQuestion1"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/answer"
-        app:layout_constraintVertical_weight="18"
-        android:labelFor="@id/answer"
-        tools:ignore="HardcodedText"
-        />
+            <TextView
+                android:id="@+id/question"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="question"
+                tools:text="@string/validityQuestion1"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintTop_toBottomOf="@id/line"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/answer"
+                app:layout_constraintVertical_weight="18"
+                android:labelFor="@id/answer"
+                tools:ignore="HardcodedText"
+                />
 
-    <EditText
-        android:id="@+id/answer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="360dp"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/question"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/buttons"
-        app:layout_constraintVertical_weight="50"
-        tools:ignore="HardcodedText"
-        android:importantForAutofill="no"
-        android:inputType="textLongMessage"
-        />
+            <EditText
+                android:id="@+id/answer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="360dp"
+                android:textSize="18sp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:gravity="top"
+                tools:text="text"
+                app:layout_constraintTop_toBottomOf="@id/question"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/buttons"
+                app:layout_constraintVertical_weight="50"
+                tools:ignore="HardcodedText"
+                android:importantForAutofill="no"
+                android:inputType="textLongMessage"
+                />
 
-    </LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
     <include
